--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,41 @@
-# Compiled class file
+# Java
 *.class
-
-# Log file
 *.log
+target/
 
-# BlueJ files
-*.ctxt
+# IDE
+.idea/
+.vscode/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# OS files
+.DS_Store
+Thumbs.db
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Maven
+.mvn/wrapper/maven-wrapper.jar
+target/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# IntelliJ IDEA
+*.iws
+*.iml
+*.ipr
+
+# NetBeans
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+/build/
+/target/
+
+# Eclipse
+.project
+.classpath
+.settings/
+
+# VS Code
+.vscode/
+
+# Log files
+*.log
